--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DISCORD_TOKEN="MTA3ODQxNzM2NjgyMTYzODI1NA.G8XUn6.QPpVzpvAcdqsUcho5YnOvm5Us3fJSBkkkuuKhE"
+TOKEN="MTA3ODQxNzM2NjgyMTYzODI1NA.Gf4XxR.MRI9gVwa1cVn5ifFKFYvAZjBXYqFvKwHWnwobM"
