added type , keywords and author

--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
   "name": "kuzu",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A description of your project",
+  "main": "src/index.js",
+  "type": "module",
   "scripts": {
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "discord.js",
+    "bot"
+  ],
+  "author": "Ashneet Chawla",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^14.7.1",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "nodemon": "^2.0.20"
   }
 }
