--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
   "name": "kuzu",
   "version": "1.0.0",
-  "description": "A description of your project",
-  "main": "src/index.js",
+  "description": "",
   "type": "module",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "discord.js",
-    "bot"
-  ],
-  "author": "Ashneet Chawla",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^14.7.1",
-    "dotenv": "^16.0.3",
-    "nodemon": "^2.0.20"
+    "dotenv": "^16.0.3"
   }
 }
