--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "kuzu",
+  "name": "discord-bot",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
