created new basic bot

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^14.7.1",
+    "djs-commander": "^0.0.44",
     "dotenv": "^16.0.3"
   }
 }
