--- a/package.json
+++ b/package.json
@@ -1,18 +1,5 @@
 {
-  "name": "discord-bot",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "discord.js": "^14.7.1",
-    "djs-commander": "^0.0.44",
-    "dotenv": "^16.0.3",
-    "nodemon": "^2.0.22"
+    "discord.js": "^14.11.0"
   }
 }
