--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
-    "discord.js": "^14.11.0"
+    "discord.js": "^14.11.0",
+    "dotenv": "^16.1.4"
+  },
+  "devDependencies": {
+    "eslint": "^8.42.0"
   }
 }
